fixes some small layout issues for Iphone SE

--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -465,6 +465,7 @@ a,
     box-shadow: 0 0 4px 0 rgba(0, 0, 0, 0.15), 0 2px 2px 0 rgba(0, 0, 0, 0.06);
     font-family: $headingFont;
     font-weight: 700;
+    min-width: 250px;
 
     max-width: 300px;
 
@@ -1747,7 +1748,7 @@ a,
 
   &.rating-big > label:before {
     font-size: 35px;
-    margin: 0 15px;
+    margin: 0 10px;
   }
 } 
 
